fixed spacing

--- a/shuttler/src/components/Spacer/Spacer.css
+++ b/shuttler/src/components/Spacer/Spacer.css
@@ -1,9 +1,9 @@
-.Spacer-component{
-    height: 300px;
+.Spacer-component {
+  height: 180px;
 }
 
-@media only screen and (max-width: 650px){
-    .Spacer-component{
-        height: 0px;
-    }
+@media only screen and (max-width: 650px) {
+  .Spacer-component {
+    height: 0px;
+  }
 }
